--- a/rspc_tauri2/Cargo.toml
+++ b/rspc_tauri2/Cargo.toml
@@ -27,4 +27,4 @@ serde_json = "1.0.114"
 thiserror = "1.0.58"
 futures = "0.3.30"
 tokio = { version = "1.36.0", features = ["sync", "rt", "macros"] }
-tauri = { version = "2.0.0-beta.14" }
+tauri = { version = "2.0.0-rc" }
