--- a/rspc_tauri_specta_example/src-tauri/Cargo.toml
+++ b/rspc_tauri_specta_example/src-tauri/Cargo.toml
@@ -6,26 +6,14 @@ authors = ["you"]
 edition = "2021"
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-beta", features = [] }
+tauri-build = { version = "2.0.2" }
 
 [dependencies]
-tauri = { version = "2.0.0-beta", features = [] }
-tauri-plugin-shell = "2.0.0-beta"
+tauri = { version = "2.0.2" }
+tauri-plugin-shell = "2.0.2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-rspc = { version = "0.2.0", features = [
-    "specta2",
-] } # <- The specta2 feature is what makes this all work
-specta = "=2.0.0-rc.11"
-rspc-tauri2 = { git = "https://github.com/specta-rs/tauri2", rev = "a605fbb7b77ba55ca310c20e2475fddb05fbc969" }
-tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
-tauri-specta = { version = "=2.0.0-rc.5", features = [
-    "javascript",
-    "typescript",
-] }
-
-# I know these do nothing in a Cargo workspace but this should help if people copy this example.
-[patch.crates-io]
-# Interop support
-specta = { git = "https://github.com/oscartbeaumont/specta", rev = "d32f7189246e821f1152c0b78d43fcc3eebfd8fd" }
 rspc = { git = "https://github.com/oscartbeaumont/rspc", rev = "c57fa59a4369a4e64a5322dd7eb0cf3992b57ab1" }
+specta = { version = "2.0.0-rc.11" }
+rspc-tauri2 = { path = "../../rspc_tauri2" }
+tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
